--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bower": "^1.7.7",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "lodash": "^4.5.0",
     "mongoose": "^4.4.3",
     "node-sass-middleware": "^0.9.7",
     "request": "^2.69.0"
