--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "^2.2.0",
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "Materialize": "materialize#^0.97.5"
   }
 }
